CAY-2999 Modeler: A restricted method in java.lang.System has been called